--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "eyf/laravel-exodus",
+    "name": "smario10/laravel-exodus",
     "description": "Laravel YAML migrations",
     "keywords": [
         "laravel",
